--- a/src/ui/minutes-meeting-ui/src/app/meeting-recording/meeting-recording.component.html
+++ b/src/ui/minutes-meeting-ui/src/app/meeting-recording/meeting-recording.component.html
@@ -2,6 +2,6 @@
     <h2 class="text-center">Meeting Recording Converter</h2>
     <div class="input-group">
         <input #linkInput type="text" class="form-control" placeholder="Paste recording link here..." />
-        <button type="button" class="btn btn-primary" (click)="processLink(linkInput.value)">Primary</button>
+        <button type="button" class="btn btn-primary" (click)="processLink(linkInput.value)">Proceed</button>
     </div>
 </div>
