--- a/src/ui/minutes-meeting-ui/src/app/app.component.scss
+++ b/src/ui/minutes-meeting-ui/src/app/app.component.scss
@@ -1,3 +1,5 @@
-nav {
-    background-color: rgb(189, 189, 189);
+.navbar {
+    background-color: transparent !important;
+    border-bottom: 1.5px black solid;
+    border-radius: 5px;
 }
