--- a/src/ui/minutes-meeting-ui/src/app/meeting-recording/meeting-recording.component.html
+++ b/src/ui/minutes-meeting-ui/src/app/meeting-recording/meeting-recording.component.html
@@ -1,7 +1,8 @@
 <div class="upload-container mt-3">
     <h2 class="text-center">Meeting Recording Converter</h2>
-    <div class="input-group">
+    <div class="input-group" [hidden]="isLoading">
         <input #linkInput type="text" class="form-control" placeholder="Paste recording link here..." />
         <button type="button" class="btn btn-primary" (click)="processLink(linkInput.value)">Proceed</button>
     </div>
+    <h3 [hidden]="!isLoading">The transcription is being generated...</h3>
 </div>
