ui styling minor fix

--- a/src/ui/minutes-meeting-ui/src/app/meeting-recording/meeting-recording.component.html
+++ b/src/ui/minutes-meeting-ui/src/app/meeting-recording/meeting-recording.component.html
@@ -1,7 +1,6 @@
 <div class="upload-container mt-3">
-    <h2 class="text-center">Meeting Recording Converter</h2>
-    <div class="input-group">
-        <input #linkInput type="text" class="form-control" placeholder="Paste recording link here..." />
-        <button type="button" class="btn btn-primary" (click)="processLink(linkInput.value)">Proceed</button>
+    <div class="input-group container">
+        <input #linkInput type="text" class="form-control input-style" style="margin-right:10px" placeholder="Paste recording link here..." />
+        <button type="button" class="btn btn-primary btn-style" (click)="processLink(linkInput.value)">Proceed</button>
     </div>
 </div>
