--- a/src/ui/minutes-meeting-ui/src/app/app.component.html
+++ b/src/ui/minutes-meeting-ui/src/app/app.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">Minutes of Meeting Generator</a>
+  <div class="container-fluid" style="justify-content:center">
+    <a class="navbar-brand" href="#" style="font-weight:600">Minutes of Meeting Generator</a>
   </div>
 </nav>
 
